Small changes in the DigitalObject class: completed making the permanent URL optional.