@@ -26,10 +26,9 @@ import eu.planets_project.ifr.core.simple.impl.AlwaysSaysValidService;
 
 /**
  * @author <a href="mailto:Andrew.Jackson@bl.uk">Andy Jackson</a>
- *
  */
 public class AlwaysSaysValidServiceTest {
-    
+
     /* The location of this service when deployed. */
     String wsdlLoc = "/pserv-if-simple/AlwaysSaysValidService?wsdl";
 
@@ -41,38 +40,43 @@ public class AlwaysSaysValidServiceTest {
      */
     @Before
     public void setUp() throws Exception {
-        ids = ServiceCreator.createTestService(Validate.QNAME, AlwaysSaysValidService.class, wsdlLoc );
+        ids = ServiceCreator.createTestService(Validate.QNAME,
+                AlwaysSaysValidService.class, wsdlLoc);
     }
 
     @Test
     public void testDescribe() {
         ServiceDescription desc = ids.describe();
-        System.out.println("Recieved service description: " + desc.toXmlFormatted() );
-        assertTrue("The ServiceDescription should not be NULL.", desc != null );
+        assertTrue("The ServiceDescription should not be NULL.", desc != null);
+        System.out.println("Recieved service description: "
+                + desc.toXmlFormatted());
     }
 
     @Test
     public void testValidate() throws MalformedURLException, URISyntaxException {
         // Attempt to determine the type of a simple file, by name
-        testValidateThis(null, new URI("http://some"), ValidateResult.Validity.INVALID );
-        testValidateThis(new DigitalObject.Builder(new URL("http://some"), Content.byReference(null) ).build() , new URI("ext"), 
-                ValidateResult.Validity.VALID );
+        testValidateThis(null, new URI("http://some"),
+                ValidateResult.Validity.INVALID);
+        testValidateThis(new DigitalObject.Builder(Content.byReference(null))
+                .permanentUrl(new URL("http://some")).build(), new URI("ext"),
+                ValidateResult.Validity.VALID);
     }
-    
+
     /**
-     * 
      * @param purl
      * @param type
      */
-    private void testValidateThis( DigitalObject dob , URI type, ValidateResult.Validity valid ) {
+    private void testValidateThis(DigitalObject dob, URI type,
+            ValidateResult.Validity valid) {
         /* Now pass this to the service */
-        ValidateResult ir = ids.validate(dob, type );
-        
+        ValidateResult ir = ids.validate(dob, type);
+
         /* Check the result */
-        System.out.println("Recieved validity: " + ir.getValidity() );
-        System.out.println("Recieved service report: " + ir.getReport() );
-        assertEquals("The returned type did not match the expected;", valid , ir.getValidity() ) ;
-        
+        System.out.println("Recieved validity: " + ir.getValidity());
+        System.out.println("Recieved service report: " + ir.getReport());
+        assertEquals("The returned type did not match the expected;", valid, ir
+                .getValidity());
+
     }
 
 }
